Modification sur index et contact

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@ Author: Ilyass El Mansouri
 						<div class="contact-head text-center">
 							<h2>Mentions légales</h2>
 						</div>	
-							<p align="justify">Ce site web a vu le jour grâce à la collaboration de 8 étudiants dans le cadre du projet ETIC de Télécom ParisTech (Enjeux des Technologies de l’Information et de la Communication). «Son but est de former les futurs ingénieurs à l’analyse des relations entre science, technique et société, afin qu’ils puissent tenir une place responsable dans la démocratie technique contemporaine marquée par l’émergence du principe de précaution et par une participation toujours plus large des usagers et du grand public aux questions scientifiques et techniques.» (extrait du site ci-dessous)</p>
+							<p align="justify">Ce site web a été créé dans le cadre du projet ETIC de Télécom ParisTech (Enjeux des Technologies de l’Information et de la Communication). Son but est de donner des clefs pour démêler les relations entre science, technique et société, dans un contexte contemporain marqué par l’émergence du principe de précaution et par une participation des usagers et du grand public à la construction des innovations. Pour réussir «son» innovation, l’ingénieur doit désormais maîtriser l’alignement entre technique, service, société et marché.</p>
 							<p>Pour en savoir plus, n’hésitez pas à visiter le site dédié au projet ETIC :</p>
 							<center>
 							<div class="jumbotron">
@@ -109,13 +109,14 @@ Author: Ilyass El Mansouri
 							<h2>Répartition des rôles</h2>
 						</div>	
 						<ul>
+						<li><b>Encadrante : </b>Adeline Neurone</li>
 						<li><b>Webographe : </b>Alexis Blanchet</li>
 						<li><b>Journaliste : </b>Arnaud Dubessay</li>
 						<li><b>Juriste : </b>Pierre Ucla</li>
 						<li><b>Architecte : </b>Nathan Azoulay</li>
-						<li><b>Théoricien : </b>David El-Chenois Jia</li>
+						<li><b>Théoricien : </b>David Jia</li>
 						<li><b>Designer : </b>Aloïs Pourchot</li>
-						<li><b>Intégrateur Web : </b>El Mansouri Ilyass</li>
+						<li><b>Intégrateur Web : </b>Ilyass El Mansouri</li>
 
 						<div class="contact-head text-center">
 							<h2>Contactez-Nous</h2>
@@ -159,8 +160,8 @@ Author: Ilyass El Mansouri
 				<div class="container">
 					<h3>Retrouvez-Nous</h3>
 					<ul>
-						<li><a class="facebook" href="#"><span> </span></a></li>
-						<li><a class="twitter" href="#"><span> </span></a></li>
+						<li><a class="facebook" href="https://www.facebook.com/TelecomParisTech/"><span> </span></a></li>
+						<li><a class="twitter" href="https://twitter.com/TelecomPTech"><span> </span></a></li>
 						<div class="clearfix"> </div>
 					</ul>
 				</div>
