--- a/products.html
+++ b/products.html
@@ -189,10 +189,10 @@ Author: El Mansouri Ilyass
 						
 
 					<div class="products-head text-center">
-							<h3>Sources</h3>
+							<h3>Supports de cadrage de l'Affaire</h3>
 					</div>
 					<div class="products-head text-center">
-							<span>En faveur de la méthode</span>
+							<span>Groupes sociaux</span>
 					</div>
 					<div class="list-group">
 					  <a href="http://www.staminafoundation.org/" class="list-group-item disabled" target="_blank">
@@ -218,7 +218,7 @@ Author: El Mansouri Ilyass
 					</div>
 
 					<div class="products-head text-center">
-							<span>En désaccord avec cette méthode : la science réagit</span>
+							<span>La science réagit</span>
 					</div>
 
 					<div class="list-group">
@@ -265,7 +265,7 @@ Author: El Mansouri Ilyass
 					</div>
 
 					<div class="products-head text-center">
-							<span>Sources informatives : ne prennent pas partie mais informent des dévelopements d’un point de vue exterieur</span>
+							<span>Sources informatives : ne prennent pas partie mais informent des développements d’un point de vue extérieur</span>
 					</div>
 					
 					<div class="list-group">
@@ -297,7 +297,7 @@ Author: El Mansouri Ilyass
 
 							<center>
 							<div class="jumbotron">
-							  <p><a class="btn btn-primary btn-lg" href="files/theoricien.pdf" role="button" target="_blank">Télécharger la liste exhaustive de nos sources</a></p>
+							  <p><a class="btn btn-primary btn-lg" href="files/liens.pdf" role="button" target="_blank">Télécharger la liste exhaustive de nos sources</a></p>
 							</div>
 							</center>
 					<!-- products-latest-news -->
