--- a/services.html
+++ b/services.html
@@ -95,7 +95,7 @@ Author: El Mansouri Ilyass
 						<!-- about-top-grid -->
 						<div class="about-top-gridn  wow fadeIn" data-wow-delay="0.5s">
 							<h4></h4>
-							<p >Pendant des années, la fondation Stamina a soigné des patients souffrant de maladies neurodégénératives par des thérapies cellulaires, un traitement inventé par David Vannoni, le fondateur de l’institution Stamina. Ces thérapies consistent à greffer des cellules-souches au patient afin de restaurer la fonction d’un tissu ou d’un organe, donc ici, de neurones. 
+							<p >Pendant des années, la fondation Stamina a soigné des patients souffrant de maladies neurodégénératives par des thérapies cellulaires, un traitement popularisé par David Vannoni, le fondateur de l’institution Stamina. Ces thérapies consistent à greffer des cellules-souches au patient afin de restaurer la fonction d’un tissu ou d’un organe, donc ici, de neurones. 
 							</p><p>Une fois au point, ces techniques permettront de soigner des maladies neurodégénératives incurables. Cependant, dans la pratique, de nombreux obstacles s’opposent aux scientifiques, les principaux étant : </p>
 							<ul>
 								<li>La différentiation de la totalité des cellules souches injectées dans le patient. Si ce critère n’est pas respecté, la régénération et la multiplication de ces cellules souches, qui étaient jusque-là bénéfiques, seront susceptibles de créer des tumeurs chez le patient. </li>
