ajout des animations js

--- a/products.html
+++ b/products.html
@@ -92,21 +92,24 @@ Author: El Mansouri Ilyass
 				<div class="container">
 				<!-- products-latest-news -->
 						<div class="about-latest-news">
-							<div class="about-head text-center wow bounceIn" data-wow-delay="0.4s">
+							<div class="about-head text-center wow fadeIn" data-wow-delay="1s">
 								<h3>Thérapie par cellules souches</h3>
 							</div>
 							<center>
+							<div class="about-head text-center wow fadeIn" data-wow-delay="1s">
 							<iframe width="860" height="615" src="https://www.youtube.com/embed/qMca6eGhrEs" frameborder="0" allowfullscreen></iframe>
-							<div class="jumbotron">
+							<div class="jumbotron wow fadeIn" data-wow-delay="1s">
 							  <p><a class="btn btn-primary btn-lg" href="files/cellules.pdf" role="button" target="_blank">Télécharger notre rapport sur les cellules souches</a></p>
+							</div>
 							</div>
 							</center>
 						</div>
 
 							<div class="about-latest-news">
-							<div class="about-head text-center wow bounceIn" data-wow-delay="0.4s">
+							<div class="about-head text-center wow fadeIn" data-wow-delay="1s">
 								<h3>Législation</h3>
 							</div>
+							<div class="about-head text-left wow fadeIn" data-wow-delay="1s">
 							<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 							  <div class="panel panel-default">
 							    <div class="panel-heading" role="tab" id="headingOne">
@@ -177,24 +180,25 @@ Author: El Mansouri Ilyass
 							      </div>
 							    </div>
 							  </div>
+							  </div>
 
 							</div>
 
 							<center>
-							<div class="jumbotron">
+							<div class="jumbotron wow fadeIn" data-wow-delay="1s">
 							  <p><a class="btn btn-primary btn-lg" href="files/juriste.pdf" role="button" target="_blank">Télécharger le rapport du juriste</a></p>
 							</div>
 							</center>
 						</div>
 						
 
-					<div class="products-head text-center">
+					<div class="products-head text-center wow fadeIn" data-wow-delay="1s">
 							<h3>Supports de cadrage de l'Affaire</h3>
 					</div>
-					<div class="products-head text-center">
+					<div class="products-head text-center wow fadeIn" data-wow-delay="1s">
 							<span>Groupes sociaux</span>
 					</div>
-					<div class="list-group">
+					<div class="list-group wow fadeIn" data-wow-delay="1s">
 					  <a href="http://www.staminafoundation.org/" class="list-group-item disabled" target="_blank">
 					    <h4 class="list-group-item-heading">Site officiel de la fondation Stamina, à l'origine de ces cellules souches</h4>
 					    <p class="list-group-item-text">http://www.staminafoundation.org/</p>
@@ -217,11 +221,11 @@ Author: El Mansouri Ilyass
 
 					</div>
 
-					<div class="products-head text-center">
+					<div class="products-head text-center wow fadeIn" data-wow-delay="1s">
 							<span>La science réagit</span>
 					</div>
 
-					<div class="list-group">
+					<div class="list-group wow fadeIn" data-wow-delay="1s">
 					  <a href="http://www.eurostemcell.org/story/unproven-stem-cell-therapy-goes-trial" class="list-group-item disabled" target="_blank">
 					    <h4 class="list-group-item-heading">Articles sur le site scientifique EuroStemCell specialisé dans leur utilisation</h4>
 					    <p class="list-group-item-text">http://www.eurostemcell.org/story/unproven-stem-cell-therapy-goes-trial</p>
@@ -264,11 +268,11 @@ Author: El Mansouri Ilyass
 
 					</div>
 
-					<div class="products-head text-center">
+					<div class="products-head text-center wow fadeIn" data-wow-delay="1s">
 							<span>Sources informatives : ne prennent pas partie mais informent des développements d’un point de vue extérieur</span>
 					</div>
 					
-					<div class="list-group">
+					<div class="list-group wow fadeIn" data-wow-delay="1s">
 					  <a href="http://www.snf.ch/fr/pointrecherche/newsroom/Pages/news-150305-horizons-des-chercheurs-contre-la-pseudo-science.aspx " class="list-group-item disabled" target="_blank">
 					    <h4 class="list-group-item-heading">Blogs de discussion permettant l’ouverture d’un débat au sujet de la méthode</h4>
 					    <p class="list-group-item-text">http://www.snf.ch/fr/pointrecherche/newsroom/Pages/news.aspx</p>
@@ -296,10 +300,11 @@ Author: El Mansouri Ilyass
 					</div>	
 
 							<center>
-							<div class="jumbotron">
+							<div class="jumbotron wow fadeIn" data-wow-delay="1s">
 							  <p><a class="btn btn-primary btn-lg" href="files/liens.pdf" role="button" target="_blank">Télécharger la liste exhaustive de nos sources</a></p>
 							</div>
 							</center>
+					</div>
 					<!-- products-latest-news -->
 
 				</div>
