--- a/about.html
+++ b/about.html
@@ -113,6 +113,12 @@ Author: El Mansouri Ilyass
 								<p><span>La frise retrace les évènements majeurs de la controverse.</span></p>
 								<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1TuH137hx9o8PBwbnz2E2OSzDoR1lU3bRuJpdgsVQ-Wo&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
 								</div>
+
+								<div class="about-head text-center wow fadeIn" data-wow-delay="1.0s">
+								<h3>Arènes de la controverse</h3>
+								<iframe src="https://www.google.com/maps/d/embed?mid=1Lry3INAdcs0ioqpjq9qfc4E6y-8" width="1150" height="600"></iframe>
+
+								</div>
 								
 						</div>
 						<!-- about-latest-news -->
