--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@ Author: Ilyass El Mansouri
 		<!-- top-header -->
 		<div class="top-header products-header">
 			<h1>Contactez<span>-Nous</span></h1>
-		</div>	
+		</div>
 		<!-- top-header -->
 			<div class="header">
 					<div class="sticky-navigation">
@@ -66,14 +66,14 @@ Author: Ilyass El Mansouri
 		$(document).ready(function() {
 			 var navoffeset=$(".header").offset().top;
 			 $(window).scroll(function(){
-				var scrollpos=$(window).scrollTop(); 
+				var scrollpos=$(window).scrollTop();
 				if(scrollpos >=navoffeset){
 					$(".header").addClass("fixed");
 				}else{
 					$(".header").removeClass("fixed");
 				}
 			 });
-			 
+
 		});
 		</script>
 
@@ -81,13 +81,13 @@ Author: Ilyass El Mansouri
 			<!-- Contact -->
 			<div class="contact">
 				<div class="container">
-	
-					<!-- contact-grids -->		
+
+					<!-- contact-grids -->
 					<div class="contact-grids">
 						<div class="contact-map">
 						<div class="contact-head text-center">
 							<h2>Mentions légales</h2>
-						</div>	
+						</div>
 							<p align="justify">Ce site web a été créé dans le cadre du projet ETIC de Télécom ParisTech (Enjeux des Technologies de l’Information et de la Communication). Son but est de donner des clefs pour démêler les relations entre science, technique et société, dans un contexte contemporain marqué par l’émergence du principe de précaution et par une participation des usagers et du grand public à la construction des innovations. Pour réussir «son» innovation, l’ingénieur doit désormais maîtriser l’alignement entre technique, service, société et marché.</p>
 							<p>Pour en savoir plus, n’hésitez pas à visiter le site dédié au projet ETIC :</p>
 							<center>
@@ -95,15 +95,15 @@ Author: Ilyass El Mansouri
 							  <p><a class="btn btn-primary btn-lg" href="http://ethique-tic.fr/2016/" role="button" target="_blank">ETIC 2016</a></p>
 							</div>
 							</center>
-							
+
 						</div>
 						<!-- contact-form -->
 
 						<div class="contact-head text-center">
 							<h2>Répartition des rôles</h2>
-						</div>	
+						</div>
 						<ul>
-						<li><b>Encadrante : </b>Adeline Neurone</li>
+						<li><b>Encadrante : </b>Adeline Néron</li>
 						<li><b>Webographe : </b>Alexis Blanchet</li>
 						<li><b>Journaliste : </b>Arnaud Dubessay</li>
 						<li><b>Juriste : </b>Pierre Ucla</li>
@@ -114,7 +114,7 @@ Author: Ilyass El Mansouri
 
 						<div class="contact-head text-center">
 							<h2>Contactez-Nous</h2>
-						</div>	
+						</div>
 						<div class="contact-form">
 							<form>
 								<div class="contact-form-row">
@@ -183,4 +183,3 @@ Author: Ilyass El Mansouri
 		<!-- conatiner -->
 	</body>
 </html>
-
