Modification du choix des titres

--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@ Author: El Mansouri Ilyass
 								<span class="menu"> </span>
 					            <ul>
 					            	<li ><a href="index.html">Présentation</a></li>
-					                <li><a href="about.html">Vue Globale</a></li>
+					                <li><a href="about.html">Vue Générale</a></li>
 					                <li class="active"><a href="services.html">Enjeux</a></li>
 					                <li><a href="products.html">Approfondissement</a></li>
 					                <li><a href="contact.html">Contact</a></li>
@@ -183,7 +183,7 @@ Author: El Mansouri Ilyass
 					<div class="footer-left wow fadeInLeft" data-wow-delay="0.4s">
 							<ul>
 				            	<li><a href="index.html">Présentation</a></li>
-				                <li><a href="about.html">Vue Globale</a></li>
+				                <li><a href="about.html">Vue Générale</a></li>
 				                <li class="active"><a href="services.html">Enjeux</a></li>
 				                <li><a href="products.html">Approfondissement</a></li>
 				                <li><a href="contact.html">Contact</a></li>
