--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ Author: El Mansouri Ilyass
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Affaire Stamina - Vue globale</title>
+		<title>Affaire Stamina - Vue générale</title>
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="js/jquery.min.js"> </script>
@@ -43,7 +43,7 @@ Author: El Mansouri Ilyass
 								<span class="menu"> </span>
 					            <ul>
 					            	<li ><a href="index.html">Présentation</a></li>
-					                <li class="active"><a href="about.html">Vue Globale</a></li>
+					                <li class="active"><a href="about.html">Vue Générale</a></li>
 					                <li><a href="services.html">Enjeux</a></li>
 					                <li><a href="products.html">Approfondissement</a></li>
 					                <li><a href="contact.html">Contact</a></li>
@@ -124,7 +124,7 @@ Author: El Mansouri Ilyass
 					<div class="footer-left wow fadeInLeft" data-wow-delay="0.4s">
 							<ul>
 				            	<li><a href="index.html">Présentation</a></li>
-				                <li class="active"><a href="about.html">Vue Globale</a></li>
+				                <li class="active"><a href="about.html">Vue Générale</a></li>
 				                <li><a href="services.html">Enjeux</a></li>
 				                <li><a href="products.html">Approfondissement</a></li>
 				                <li><a href="contact.html">Contactez-Nous</a></li>
