--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@ Author: Ilyass El Mansouri
 								<span class="menu"> </span>
 					            <ul>
 					            	<li ><a href="index.html">Présentation</a></li>
-					                <li><a href="about.html">Vue Globale</a></li>
+					                <li><a href="about.html">Vue Générale</a></li>
 					                <li><a href="services.html">Enjeux</a></li>
 					                <li><a href="products.html">Approfondissement</a></li>
 					                <li class="active"><a href="contact.html">Contact</a></li>
@@ -166,7 +166,7 @@ Author: Ilyass El Mansouri
 					<div class="footer-left wow fadeInLeft" data-wow-delay="0.4s">
 							<ul>
 				            	<li><a href="index.html">Présentation</a></li>
-				                <li><a href="about.html">Vue Gloable</a></li>
+				                <li><a href="about.html">Vue Générale</a></li>
 				                <li><a href="services.html">Enjeux</a></li>
 				                <li><a href="products.html">Approfondissement</a></li>
 				                <li class="active"><a href="contact.html">Contactez-Nous</a></li>
