--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<span class="menu"> </span>
 					            <ul>
 					            	<li class="active"><a href="index.html">Présentation</a></li>
-					                <li><a href="about.html">Vue Globale</a></li>
+					                <li><a href="about.html">Vue Générale</a></li>
 					                <li><a href="services.html">Enjeux</a></li>
 					                <li><a href="products.html">Approfondissement</a></li>
 					                <li><a href="contact.html">Contact</a></li>
@@ -189,7 +189,7 @@
 					<div class="footer-left wow fadeInLeft" data-wow-delay="1s">
 						 	<ul>
 				            	<li><a href="index.html">Présentation</a></li>
-				                <li><a href="about.html">Vue Globale</a></li>
+				                <li><a href="about.html">Vue Générale</a></li>
 				                <li><a href="services.html">Enjeux</a></li>
 				                <li><a href="products.html">Approfondissement</a></li>
 				                <li><a href="contact.html">Contactez-Nous</a></li>
